fix: fixed some overlapping divs with nav

--- a/src/sass/components/_searchSection.scss
+++ b/src/sass/components/_searchSection.scss
@@ -4,6 +4,8 @@
   text-align: center;
   padding-top: 5rem;
   padding-inline: 1.5rem;
+  padding-block-end: 5rem;
+
 
   .results {
     padding: 0.5rem;
