--- a/src/sass/components/_selectedMedia.scss
+++ b/src/sass/components/_selectedMedia.scss
@@ -28,10 +28,16 @@
   text-align: left;
   font-size: 70%;
   position: absolute;
-  top: 50px;
+  top: 0;
+  padding-block-end: 5rem;
 
+  
+  @media #{$sm} {
+    top: 55px;
+  }
   @media #{$md} {
     font-size: 90%;
+    top: 50px;
   }
   h1 {
     font-size: 190%;
